[gd_scene load_steps=10 format=3 uid="uid://cd7eitik7uahv"]

[ext_resource type="Script" path="res://Scripts/GameOver.gd" id="1_fjtej"]
[ext_resource type="Script" path="res://Scripts/ParallaxBackground.gd" id="2_sldqi"]
[ext_resource type="Texture2D" uid="uid://5jbx1l5p3lhn" path="res://Art/background/background.png" id="3_tir1p"]
[ext_resource type="Texture2D" uid="uid://bm50jcbk04lp1" path="res://Art/obstacles/bird/Bird_thing_Spritesheet.png" id="4_ocmsn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3n7ch"]
atlas = ExtResource("4_ocmsn")
region = Rect2(0, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_ck3gw"]
atlas = ExtResource("4_ocmsn")
region = Rect2(256, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_sjycm"]
atlas = ExtResource("4_ocmsn")
region = Rect2(512, 0, 256, 256)

[sub_resource type="AtlasTexture" id="AtlasTexture_htykr"]
atlas = ExtResource("4_ocmsn")
region = Rect2(768, 0, 256, 256)

[sub_resource type="SpriteFrames" id="SpriteFrames_xvwkr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n7ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ck3gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sjycm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htykr")
}],
"loop": true,
"name": &"Fly",
"speed": 5.0
}]

[node name="game_over" type="Node2D"]
script = ExtResource("1_fjtej")

[node name="Play" type="Button" parent="."]
offset_left = 397.0
offset_top = 234.0
offset_right = 684.0
offset_bottom = 338.0
text = "Play"

[node name="Quit" type="Button" parent="."]
offset_left = 397.0
offset_top = 391.0
offset_right = 684.0
offset_bottom = 495.0
text = "Quit"

[node name="game_over_text" type="Label" parent="."]
offset_left = 294.0
offset_top = 20.0
offset_right = 790.0
offset_bottom = 113.0
theme_override_colors/font_color = Color(0.72549, 0, 0.933333, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Game Over!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="."]
offset_left = 294.0
offset_top = 150.0
offset_right = 790.0
offset_bottom = 243.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="high_score" type="Label" parent="."]
offset_left = 294.0
offset_top = 86.0
offset_right = 790.0
offset_bottom = 179.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Background" type="ParallaxBackground" parent="."]
script = ExtResource("2_sldqi")

[node name="Sky" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2(1150, 0)

[node name="Sprite2D" type="Sprite2D" parent="Background/Sky"]
z_index = -2
position = Vector2(577.889, 323.5)
scale = Vector2(0.600926, 0.600926)
texture = ExtResource("3_tir1p")

[node name="Bird" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2(4, 4)
motion_mirroring = Vector2(4500, 0)

[node name="Bird1" type="AnimatedSprite2D" parent="Background/Bird"]
position = Vector2(1374, 141)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xvwkr")
animation = &"Fly"
autoplay = "Fly"
speed_scale = 1.3
flip_h = true

[node name="Bird2" type="AnimatedSprite2D" parent="Background/Bird"]
position = Vector2(2683, 563)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xvwkr")
animation = &"Fly"
autoplay = "Fly"
speed_scale = 1.3
flip_h = true

[node name="Bird3" type="AnimatedSprite2D" parent="Background/Bird"]
position = Vector2(4212, 372)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_xvwkr")
animation = &"Fly"
autoplay = "Fly"
speed_scale = 1.3
flip_h = true

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
